<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_empty_venue_message">Sorry! No items</string>
    <string name="txt_empty_data">Sorry! Data not available</string>
    <string name="txt_description">Description</string>
    <string name="txt_contact_information">Contact Information</string>
    <string name="txt_address">Address</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_twitter">Twitter</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_instagram">Instagram</string>
    <string name="txt_Search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>